Fix navbar and delete modal flickering

--- a/resources/sass/browser/app.scss
+++ b/resources/sass/browser/app.scss
@@ -22,6 +22,10 @@ button{
   // }
 }
 
+[x-cloak] {
+  display: none !important;
+}
+
 // h1              { font-size: 2em; }
 // h2              { font-size: 1.5em; }
 // h3              { font-size: 1.17em;  }
